refactor: unify player settings storage and simplify API